# kh2-multiplayer

./: .gitignore  .mcp.json  AGENTS.md  CMakeLists.txt  README.md  SETUP.md  kh2coop_runtime.ini.example  opencode.json
.claude/: settings.local.json
.codex/: config.toml
common/include/kh2coop/: ByteBuffer.hpp  Codec.hpp  InputMailbox.hpp  NetworkClient.hpp  Protocol.hpp  Types.hpp
common/src/: Codec.cpp  NetworkClient.cpp  Protocol.cpp
content/: NOTES.md
docs/: ACCEPTANCE_TESTS.md  AGENT_ASSIGNMENTS.md  ARCHITECTURE_MODES.md  CAMERA_RE_SESSION.md  CODEBASE_MAP.md  DEVELOPMENT_WORKFLOW.md  HANDOFF_FRIEND_CONTROL.md  IMPLEMENTATION_BACKLOG.md  INPUT_RE_SESSION.md  KH2_CONTROL_CLI.md  LESSONS_LEARNED.md  OPENKH_REFERENCE.md  POSITION_PROBE_HANDOFF.md  POSITION_PROBE_SESSION2.md  POSITION_PROBE_SESSION3.md  RE_PROBE_CHECKLIST.md  ROXAS_DUAL_WIELD_FORM.md  SIM_LOOP_HANDOFF.md  agent_tasks.json  kh2_multiplayer_scope_expansion_review.md  kh2_realm_protocol_sketch.jsonc  kh2_three_client_coop_design.md  kh2_three_client_protocol.jsonc  pointer_map_v1.md  tonight_spawn_roxas_plan.md
docs/archive/: CAMERA_RE_SESSION.md  kh2_multiplayer_scope_expansion_review.md  tonight_spawn_roxas_plan.md
docs/probes/: AXEL_FIGHT_RE_SESSION.md  FRIEND_ENEMY_DISCOVERY_SESSION.md  README.md  RE_PROBE_CHECKLIST.md  memory_probe_log_2026-03-25_ce_freeze_call_scan.txt  memory_probe_log_2026-03-25_room_id_write_hit.txt
docs/probes/archive/: memory_probe_log_2026-03-24_232432.txt  memory_probe_log_2026-03-25_now_staging_watch.txt
inject/: CMakeLists.txt
inject/src/: DllMain.cpp  EntityHook.cpp  EntityHook.hpp  PatternScan.hpp
runtime/: README.md
runtime/include/kh2coop/: CameraController.hpp  GameBridgePC.hpp  IGameBridge.hpp  KH2Offsets.hpp  ReplicaController.hpp
runtime/src/: GameBridgePC.cpp  RuntimeMain.cpp
scripts/: restart-kh2.ps1  run-kh2ctl-mcp.ps1
server/: README.md
server/include/kh2coop/: PeerState.hpp  SessionHost.hpp  SimulationState.hpp
server/src/: ServerMain.cpp  SessionHost.cpp  SimulationState.cpp
tests/: FakeSimulation.cpp
tools/kh2ctl/: CMakeLists.txt
tools/kh2ctl/src/: main.cpp
tools/mcp_kh2ctl/: server.py
